--- a/package.json
+++ b/package.json
@@ -120,13 +120,13 @@
     "get-port": "^6.1.2",
     "json-rpc-peer": "^0.17.0",
     "memory-card": "^1.1.2",
-    "open-graph": "^0.2.6",
+    "open-graph": "github:Coding4Web3/node-open-graph",
     "rx-queue": "^1.0.5",
     "state-switch": "^1.6.3",
     "uuid": "^8.3.2",
     "wechaty-puppet": "^1.20.1",
-    "wechaty-puppet-service": "^1.19.8",
-    "wechaty-puppet-wechat4u": "^1.11.1",
+    "wechaty-puppet-service": "^1.18.2",
+    "wechaty-puppet-wechat4u": "github:Coding4Web3/puppet-wechat4u",
     "wechaty-token": "^1.1.1",
     "ws": "^8.5.0"
   },
@@ -134,7 +134,7 @@
     "@chatie/eslint-config": "^1.0.4",
     "@chatie/git-scripts": "^0.6.2",
     "@chatie/semver": "^0.4.7",
-    "@chatie/tsconfig": "^4.6.3",
+    "@chatie/tsconfig": "^0.20.5",
     "@swc/core": "^1.2.155",
     "@swc/helpers": "^0.3.6",
     "@types/cross-spawn": "^6.0.2",
@@ -152,9 +152,9 @@
     "qrcode-terminal": "^0.12.0",
     "raven": "^2.6.4",
     "regenerator-runtime": "^0.13.9",
-    "sloc": "^0.2.1",
+    "sloc": "^0.1.11",
     "typed-emitter": "^1.5.0-from-event",
-    "typedoc": "^1.0.0-dev.4 ",
+    "typedoc": "^0.23.27",
     "wechaty-puppet-mock": "^1.18.2",
     "wechaty-puppet-padlocal": "^1.11.13"
   },
